fix(waybar): give up on blurring
https://github.com/Alexays/Waybar/issues/132

--- a/modules/waybar.css
+++ b/modules/waybar.css
@@ -1,6 +1,5 @@
 #waybar {
     background-color: rgba(30, 30, 30, 0.5);
-    backdrop-filter: blur(8px);
 }
 
 #clock {
